# stratmc

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc-1.txt  .readthedocs.yml  CITATION.cff  README.html  README.md  README.rst  conf.py  environment-dev.yml  genindex.html  index.html  index.rst  latexindex.html  latexindex.rst  objects.inv  pre-commit-config.yaml  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: pytest.yml
_downloads/2b7577261d57df4c573e19622e7320b3/: plotting-16.py
_downloads/36261445af1cab6b0530fc46c8c6b162/: plotting-21.py
_downloads/3a1d27b79b54d256ea1bde580d0dde69/: plotting-20.py
_downloads/4679bf85b31a255636d13bd4abbdbe12/: plotting-3.py
_downloads/4c144465b290b7f012294e3f733f6254/: plotting-11.py
_downloads/54b1c417512a94ee843ec6ae0f40b82a/: plotting-12.py
_downloads/5f08e78271933f8ae7bb35c23538bba9/: plotting-18.py
_downloads/6026af5081d326237cd9f3a810af5dc2/: plotting-9.py
_downloads/6595affa7a16993f6404cb17e38cc6d5/: plotting-13.py
_downloads/72b5316d08340c36c66e1baa8cc7ca11/: plotting-17.py
_downloads/8574cff4ceb594a995116decd04bb0e5/: plotting-2.py
_downloads/88a5fc97eca5fc5a80c9f0c9f41e63d3/: plotting-4.py
_downloads/8b5d8b2f0e1d0fbf776dfbc15bc0e327/: plotting-6.py
_downloads/a316a666cea70599ddf95fcc3d865a6f/: plotting-15.py
_modules/: index.html
_sources/: index.rst.txt  latexindex.rst.txt
conda-envs/: environment-dev.yml  environment-docs.yml
docs/: age_datatable.csv  api.html  api.rst  data.html  data.rst  datatable.csv  datatable.html  datatable.rst  examples.html  examples.rst  inference.html  inference.rst  installation.html  installation.rst  model.html  model.rst  model_description.html  model_description.rst  plotting.html  plotting.rst  quickstart.html  quickstart.rst  synthetic_examples.html  synthetic_examples.rst  synthetics.html  synthetics.rst  tests.html  tests.rst  todo.html  todo.rst  userguide.html  userguide.rst
stratmc/: __init__.py  config.py  data.py  inference.py  model.py  plotting.py  synthetics.py  tests.py
(+75 files in other folders)
