[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stratmc"
dynamic = ["version"]
description = "Bayesian statistical framework for reconstructing past Earth system change from the stratigraphic record"
authors = [
    {name = "Stacey Edmonsond", email = "staceyedmonsond777@gmail.com"}
]
keywords = ["Bayesian inference", "stratigraphy", "geochemistry", "Earth history", "stratigraphic correlation", "chemostratigraphy"]
classifiers = [
        "Development Status :: 4 - Beta",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "Operating System :: OS Independent",
]
requires-python = ">=3.10"
readme = "README.rst"
license = {file = "LICENSE"}
dependencies = [
    "blackjax",
    "fastprogress",
    "ipywidgets",
    "jax",
    "matplotlib<=3.9.0",
    "netCDF4",
    "numpyro",
    "pymc>=5.16.2",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tqdm",
    "xarray",
]

[tool.setuptools.dynamic]
  version = {attr = "stratmc.__version__"}

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pre-commit"
]
test = [
    "pytest",
    "pytest-cov",
]
doc = [
    "jupyter-sphinx",
    "myst-nb",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx>=4.5",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx_inline_tabs",
    "sphinx-notfound-page",
    "sphinxext-rediraffe",
    "sphinx-remove-toctrees",
    "sphinx-togglebutton",
    "watermark",
]

[project.urls]
Repository = "https://github.com/sedmonsond/stratmc"
Documentation = "https://stratmc.readthedocs.io"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The group X_new is not defined in the InferenceData scheme",
    "ignore:X_new group is not defined in the InferenceData scheme"
]

[tool.setuptools]
packages=[
    "stratmc",
]
